# Michael-J.-Mauboussin-Twin

./: .gitignore  README.md  pyproject.toml
src/: dev.ipynb  main.py
src/feature/extract/: constants.py  datamodels.py  web.py
src/michael_mauboussin_twin/feature/extract/: constants.py  datamodels.py  extract_data.py  scrape.py  web.py
src/michael_mauboussin_twin/transform/: base.py  datamodels.py  settings.py  text.py  text_db.py  vision_db.py
src/notebooks/: dev.ipynb  query_db.ipynb  vllm_run.ipynb
