[project]
name = "michael-mauboussin-twin"
version = "0.1.0"
description = "LLM Engineering for Michael J. Mauboussin"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles>=24.1.0",
    "bs4>=0.0.2",
    "colpali-engine>=0.3.6",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "langchain-text-splitters>=0.3.5",
    "litellm>=1.59.3",
    "loguru>=0.7.3",
    "matplotlib>=3.9.4",
    "pdf2image>=1.17.0",
    "qdrant-client>=1.12.1",
    "seaborn>=0.13.2",
    "selenium>=4.27.1",
    "sentence-transformers>=3.4.0",
    "stamina>=24.3.0",
    "vllm>=0.6.1",
    "webdriver-manager>=4.0.2",
    "zenml>=0.71.0",
]

[tool.poetry]
name = "michael-mauboussin-twin"
version = "0.1.0"
description = "LLM Engineering for Michael J. Mauboussin"
authors = ["Astarag Mohapatra <athekunal@gmail.com>"]
packages = [
    { include = "michael_mauboussin_twin", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"
bs4 = ">=0.0.2"
ipykernel = ">=6.29.5"
isort = ">=5.13.2"
loguru = ">=0.7.3"
selenium = ">=4.27.1"
webdriver-manager = ">=4.0.2"
zenml = ">=0.71.0"

[tool.poetry.package-data]
michael_mauboussin_twin = ["py.typed"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
